# rag-test

./: .env.example  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py
backend/app/core/: config.py  dependencies.py  exceptions.py
backend/app/db/: base.py  constants.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 5d2a74aeea57_document_and_chunk_models.py  5ec48671c2ee_enable_vector_extension.py  63e994d1f9cd_initial_schema.py
backend/app/db/models/: __init__.py  document_chunks.py  documents.py
backend/app/exceptions/: embedding.py  ingestion.py  llm.py  minio.py
backend/app/services/: embedding.py  ingestion.py  llm.py  minio.py
backend/tests/: conftest.py
backend/tests/app/services/: test_embedding.py  test_ingestion.py  test_llm.py  test_minio.py
backend/tests/integration/: test_ingestion_flow.py
scripts/: minio-entrypoint.sh  ollama-entrypoint.sh  ollama-healthcheck.sh
