[project]
name = "rag-test-backend"
version = "0.1.0"
description = "A backend for RAG project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.19",
]
